# avc

./: .gitignore  README.md
docs/: ER-TFT020-3_4SPI.rar  FRDM_modifications.docx  ~$DM_modifications.docx  ~WRL1970.tmp
src/avc/: .project
src/avc/avc_core0/: .cproject  .default_mex  .project  avc_core0.mex  mcxn947_core0.jdebug  ozone__core0.jdebug  script.jlink
src/avc/avc_core0/board/: clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
src/avc/avc_core0/device/: system_MCXN947_cm33_core0.c
src/avc/avc_core0/doc/: readme.md
src/avc/avc_core0/drivers/: fsl_smartdma.c
src/avc/avc_core0/frdmmcxn947_hello_world_cm33_core0/: .cproject  .project  frdmmcxn947_hello_world_cm33_core0.mex  script.jlink
src/avc/avc_core0/frdmmcxn947_hello_world_cm33_core0/board/: clock_config.c  pin_mux.c  pin_mux.h
src/avc/avc_core0/frdmmcxn947_hello_world_cm33_core0/source/: avc__adc.c  avc__camera_master_config.h  avc__motor_control.c  avc__motor_control.h  avc__servo_control.c  eGFX_Driver_ER-TFT020-3.h  lpspi1.c  main_core0.c
src/avc/avc_core0/source/: avc__adc.c  avc__camera_interface.c  avc__data_movement.c  avc__data_movement.h  avc__io.c  avc__io.h  avc__line_processor.c  avc__line_processor.h  avc__motor_control.c  avc__servo_control.c  avc_main__core0.c  bunny_build__config.h  button.c  button.h  eGFX_Driver_ER-TFT020-3.c  eGFX_Driver_ER-TFT020-3.h  e_config.h  lpspi1.c  lpspi1.h  main.c  main_core0.c
src/avc/avc_core0/source/assets/: Sprites_16BPP_RGB565.c  Sprites_16BPP_RGB565.h
src/avc/avc_core0/source/avc_config/: avc__master_config.h  bunny_build__config.h
src/avc/avc_core0/source/avc_io/: avc__adc.c  avc__adc.h  avc__camera_interface.c  avc__camera_interface.h  avc__io.c  avc__io.h  avc__motor_control.c  avc__motor_control.h  avc__servo_control.c  avc__servo_control.h  bv_camera__common.h  bv_camera__interface.c  bv_camera__interface.h  bv_camera__io.h  eGFX_Driver_ER-TFT020-3.c  eGFX_Driver_ER-TFT020-3.h  lpspi1.h  st7789.c
src/avc/avc_core0/utilities/: fsl_debug_console.h
src/avc/avc_core0/video/: fsl_ov5640.c
src/avc/avc_core1/: .cproject  .project  avc_core1.mex  ozone_core1.jdebug  script.jlink
src/avc/avc_core1/board/: pin_mux.c  pin_mux.h
src/avc/avc_core1/frdmmcxn947_hello_world_cm33_core1/: .cproject  .project  frdmmcxn947_hello_world_cm33_core1.mex
src/avc/avc_core1/frdmmcxn947_hello_world_cm33_core1/board/: clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
src/avc/avc_core1/frdmmcxn947_hello_world_cm33_core1/doc/: readme.md
src/avc/avc_core1/frdmmcxn947_hello_world_cm33_core1/source/: avc__camera_interface.c  avc__camera_interface.h  eGFX_Driver_ER-TFT020-3.c  lpspi1.c  main_core1.c  st7789.h
src/avc/avc_core1/part-support/: FRDM-MCXN947_manifest_v3_14.xml
src/avc/avc_core1/source/: lpspi1.c  main_core1.c  st7789.c
src/avc/avc_core1/utilities/: fsl_assert.c
src/common/avc_config/: bunny_build__config.h
src/common/display/: eGFX_Driver_ER-TFT020-3.c  eGFX_Driver_ER-TFT020-3.h  lpspi1.c  lpspi1.h  st7789.c  st7789.h
src/common/e/src/: e_tick.c
src/common/egfx/src/: eGFX_DataTypes.h
src/common/egfx/test/sdl/: CMakeLists.txt
src/common/egfx/test/sdl/prj/test_256_64_4BPP/src/: Sprites_4BPP.c
src/common/ipc/: ipc.c  ipc.h
src/common/test/ov5640_st7789/: .project  ov5640_st7789.mex
src/common/test/spi1_lcd/: .cproject  .project  default.dwf3work  script.jlink
src/e/src/: e_debug.h
src/egfx/doc/: index.html
src/egfx/doc/INC/: eGFX.css
src/egfx/old/: testdrawloop.txt
src/egfx/old/old needs ported/: eGFX_Driver_LPCXPresso_54608.c
src/egfx/src/: eGFX.h
src/egfx/test/activities/: Activity__CircleTest.c  Activity__SpriteTest.c
src/egfx/test/sdl/: boilerplate.cmake
src/egfx/test/sdl/prj/test_64_32_32BPP/: CMakeLists.txt
src/egfx/test/sdl/prj/test_64_32_32BPP/assets/: Sprites_32BPP_XRGB888.c  Sprites_32BPP_XRGB888.h
src/ipc/: ipc.c  ipc.h
src/test/ov5640_st7789/: .cproject  ov5640_st7789.mex  ozone.jdebug  script.jlink
src/test/ov5640_st7789/board/: clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
src/test/ov5640_st7789/doc/: readme.md
src/test/ov5640_st7789/source/: eGFX_Driver_ER-TFT020-3.c  main.c
src/test/ov5640_st7789/src/: eGFX_DataTypes.h
src/test/spi1_lcd/: .cproject  .default_mex  .project  ozone.jdebug  spi1_lcd.mex
src/test/spi1_lcd/board/: pin_mux.c  pin_mux.h
src/test/spi1_lcd/drivers/: fsl_spc.c
src/test/spi1_lcd/source/: lpspi1.h  main.c  st7789.c  st7789.h
(+48 files in other folders)
